--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Freebie Bible - Your Guide to Financial Opportunities & Side Hustles</title>
     <meta name="description" content="Discover the best bank bonuses, credit card rewards, brokerage offers, casino promotions, sports betting deals, and side hustle guides to boost your income.">
+    <link rel="icon" href="Money_Bag_Emoji_grande.webp" type="image/webp">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -15,31 +16,28 @@
         .dropdown-menu {
             display: none;
             position: absolute;
-            z-index: 1000;
+            z-index: 1000; /* Ensure dropdown is on top */
         }
         /* Simple mobile menu toggle - basic CSS, JS needed for real toggle */
         #mobile-menu {
-            display: none;
+            display: none; /* Initial state for JS toggle */
         }
         @media (max-width: 768px) {
             #desktop-nav {
                 display: none;
             }
-            /* JS would toggle this to block/flex */
-            /* #mobile-menu { display: none; } */
+            /* JS would toggle #mobile-menu to block/flex */
         }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans">
 
-    <!-- Header -->
     <header class="bg-white shadow-md">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex-shrink-0">
                     <a href="index.html" class="text-2xl font-bold text-blue-600">The Freebie Bible</a>
                 </div>
-                <!-- Desktop Navigation -->
                 <nav id="desktop-nav" class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
                         <a href="index.html" class="text-gray-700 hover:bg-gray-200 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium">Home</a>
@@ -48,7 +46,7 @@
                             <button class="text-gray-700 hover:bg-gray-200 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium inline-flex items-center">
                                 Financial Offers <i class="fas fa-chevron-down fa-xs ml-1"></i>
                             </button>
-                            <div class="dropdown-menu bg-white shadow-lg rounded-md mt-1 py-1 w-48">
+                            <div class="dropdown-menu bg-white shadow-lg rounded-md py-1 w-48">
                                 <a href="banks.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Bank Bonuses</a>
                                 <a href="credit-cards.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Credit Card Rewards</a>
                                 <a href="brokerages.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Brokerage Bonuses</a>
@@ -59,7 +57,7 @@
                             <button class="text-gray-700 hover:bg-gray-200 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium inline-flex items-center">
                                 Gambling <i class="fas fa-chevron-down fa-xs ml-1"></i>
                             </button>
-                            <div class="dropdown-menu bg-white shadow-lg rounded-md mt-1 py-1 w-48">
+                            <div class="dropdown-menu bg-white shadow-lg rounded-md py-1 w-48">
                                 <a href="online-casinos.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Online Casinos</a>
                                 <a href="sports-betting.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Sports Betting</a>
                             </div>
@@ -69,7 +67,7 @@
                             <button class="text-gray-700 hover:bg-gray-200 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium inline-flex items-center">
                                 Other Side Hustles <i class="fas fa-chevron-down fa-xs ml-1"></i>
                             </button>
-                            <div class="dropdown-menu bg-white shadow-lg rounded-md mt-1 py-1 w-56">
+                            <div class="dropdown-menu bg-white shadow-lg rounded-md py-1 w-56">
                                 <a href="gpt-sites.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Get-Paid-To Sites</a>
                                 <a href="focus-groups.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Focus Groups</a>
                                 <a href="surveys.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Surveys</a>
@@ -81,7 +79,6 @@
                         <a href="about.html" class="text-gray-700 hover:bg-gray-200 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium">About</a>
                     </div>
                 </nav>
-                <!-- Mobile Menu Button -->
                 <div class="md:hidden flex items-center">
                     <button id="mobile-menu-button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-500">
                         <span class="sr-only">Open main menu</span>
@@ -90,7 +87,6 @@
                 </div>
             </div>
         </div>
-        <!-- Mobile Menu, hidden by default, shown by JS -->
         <div id="mobile-menu" class="md:hidden">
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
                 <a href="index.html" class="text-gray-700 hover:bg-gray-200 hover:text-gray-900 block px-3 py-2 rounded-md text-base font-medium">Home</a>
@@ -128,17 +124,14 @@
         </div>
     </header>
 
-    <!-- Main Content -->
     <main class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
 
-        <!-- Hero Section -->
         <section class="bg-blue-600 text-white py-16 px-6 rounded-lg shadow-lg text-center">
             <h1 class="text-4xl md:text-5xl font-bold mb-4">Unlock Financial Freedom: Your Guide to Freebies & Smart Hustles.</h1>
             <p class="text-lg md:text-xl mb-8">Discover the best bank bonuses, credit card rewards, side hustles, and more to supercharge your earnings.</p>
             <a href="banks.html" class="bg-white text-blue-600 font-bold py-3 px-8 rounded-lg hover:bg-gray-200 transition duration-300 text-lg">Explore Top Offers</a>
         </section>
 
-        <!-- Introduction Section -->
         <section class="py-12">
             <div class="text-center mb-10">
                 <h2 class="text-3xl font-semibold mb-3">Why The Freebie Bible?</h2>
@@ -148,26 +141,22 @@
             </div>
         </section>
 
-        <!-- Featured Offers Section -->
         <section class="py-12 bg-gray-50 rounded-lg shadow">
             <h2 class="text-3xl font-semibold text-center mb-10">Featured Offers</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Sample Offer 1 -->
                 <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
                     <h3 class="text-xl font-semibold mb-2 text-blue-700">SoFi Checking & Savings</h3>
                     <p class="text-gray-600 mb-1">Earn up to $300 Bonus!</p>
                     <p class="text-sm text-gray-500 mb-3">Requires qualifying direct deposits (e.g., $5,000+ for full bonus). [1, 21, 27, 33, 34]</p>
                     <a href="banks.html#sofi" class="text-blue-600 hover:text-blue-800 font-medium">Learn More →</a>
                 </div>
-                <!-- Sample Offer 2 -->
                 <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
                     <h3 class="text-xl font-semibold mb-2 text-blue-700">Chase Business Ink Card</h3>
                     <p class="text-gray-600 mb-1">Earn $750 bonus cash back (or points equivalent)!</p>
                     <p class="text-sm text-gray-500 mb-3">After spending $6,000 in the first 3 months. [13, 18]</p>
                     <a href="credit-cards.html#chase-ink" class="text-blue-600 hover:text-blue-800 font-medium">Learn More →</a>
                 </div>
-                 <!-- Sample Offer 3 (Placeholder style) -->
-                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                 <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
                     <h3 class="text-xl font-semibold mb-2 text-blue-700">Schwab Starter Kit</h3>
                     <p class="text-gray-600 mb-1">Get $101 with a $50 deposit!</p>
                     <p class="text-sm text-gray-500 mb-3">Bonus invested in top 5 S&P stocks. [7, 28, 38]</p>
@@ -176,7 +165,6 @@
             </div>
         </section>
 
-        <!-- Categories Overview -->
         <section class="py-12">
             <h2 class="text-3xl font-semibold text-center mb-10">Explore Our Categories</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -219,24 +207,20 @@
             </div>
         </section>
 
-        <!-- Latest Blog Posts Section -->
         <section class="py-12 bg-gray-50 rounded-lg shadow">
             <h2 class="text-3xl font-semibold text-center mb-10">Latest From The Blog</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Placeholder Post 1 -->
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <h3 class="text-xl font-semibold mb-2">Placeholder Blog Post Title 1</h3>
                     <p class="text-gray-600 mb-4">This is a short excerpt for a sample blog post. More content will be added in Phase 2...</p>
                     <a href="blog/sample-post.html" class="text-blue-600 hover:text-blue-800 font-medium">Read More →</a>
                 </div>
-                <!-- Placeholder Post 2 -->
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <h3 class="text-xl font-semibold mb-2">Placeholder Blog Post Title 2</h3>
                     <p class="text-gray-600 mb-4">Another sample excerpt here to demonstrate the layout for recent blog articles...</p>
                     <a href="blog/sample-post.html" class="text-blue-600 hover:text-blue-800 font-medium">Read More →</a>
                 </div>
-                 <!-- Placeholder Post 3 (Optional) -->
-                <div class="bg-white p-6 rounded-lg shadow-md">
+                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <h3 class="text-xl font-semibold mb-2">Placeholder Blog Post Title 3</h3>
                     <p class="text-gray-600 mb-4">A third placeholder to fill out the section. Full blog content coming soon...</p>
                     <a href="blog/sample-post.html" class="text-blue-600 hover:text-blue-800 font-medium">Read More →</a>
@@ -249,7 +233,6 @@
 
     </main>
 
-    <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <p class="mb-2">© <span id="currentYear"></span> The Freebie Bible. All rights reserved.</p>
